--- a/react_blog/index.html
+++ b/react_blog/index.html
@@ -18,7 +18,7 @@
 
   </div>
 
-
-  <script type="text/babel" src="./app.js"></script>
+  <script src="./js/data.js"></script>
+  <script type="text/babel" src="./js/app.js"></script>
 </body>
 </html>
